ckad-sample-exam/config-maps.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ckad-ns1
  name: ckad-ns2
spec:
  finalizers:
  - kubernetes
status:
  phase: Active

---

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: alpine-pod
  name: alpine-pod
  namespace: ckad-ns2
spec:
  containers:
  - image: alpine
    name: alpine-container
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
