ckad-sample-exam/my-config-map-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-pod
  name: my-pod
  namespace: my-ns
spec:
  containers:
  - command:
    - /bin/sh
    args: ["-c", "while true; do echo sleeping; sleep 10;done"]
    image: alpine
    name: my-pod
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
