ckad-sample-exam/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ckad-ns1
  name: ckad-ns1
spec:
  finalizers:
  - kubernetes
status:
  phase: Active

---

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-a
  name: pod-a
  namespace: ckad-ns1
spec:
  containers:
  - image: httpd
    name: pod-a
  dnsPolicy: ClusterFirst
  restartPolicy: Always

---

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-b
  name: pod-b
  namespace: ckad-ns1
spec:
  containers:
  - image: nginx
    name: pod-b
  - image: alpine
    name: pod-c
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
