ckad-sample-exam/probe-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: probe-pod
  name: probe-pod
  namespace: ckad-ns3
spec:
  containers:
  - image: nginx
    name: probe-pod
    ports:
    - name: liveness-port
      containerPort: 80
    readinessProbe:
      exec:
        command: [ "ls", "/" ]
      initialDelaySeconds: 60
      periodSeconds: 15
    livenessProbe:
      httpGet:
        path: /
        port: liveness-port
      failureThreshold: 2
      periodSeconds: 10
  dnsPolicy: ClusterFirst
  restartPolicy: Always
