ckad-sample-exam/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-pod
  namespace: ckad-ns3
spec:
  containers:
  - name: pri-cont
    image: busybox
    args:
    - /bin/sh
    - -c
    - >
      while true;
      do
        echo "$(date)" >> /var/log/date.log;
        sleep 5;
      done      
    volumeMounts:
    - name: varlog
      mountPath: /var/log
  - name: sec-cont
    image: alpine
    args: [/bin/sh, -c, 'tail -n+1 -f /var/log/date.log']
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: varlog
      mountPath: /var/log
    readinessProbe:
      exec:
        command:
        - cat
        - /var/log/date.log
      initialDelaySeconds: 10
      periodSeconds: 5
  volumes:
  - name: varlog
    hostPath:
      path: "/mnt/sidecar"
