ckad-sample-exam/storage.yaml

apiVersion: v1
kind: Pod
metadata:
  name: 1312-pod
  namespace: ckad-1312
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: ckad-1312pvc
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/webdata"
          name: task-pv-storage
