ckad-sample-exam/my-nw-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: web
  name: web
spec:
  containers:
  - image: alpine
    name: web
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 15; done"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: database
  name: db
spec:
  containers:
  - image: alpine
    name: web
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 15; done"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}


---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector:
    matchLabels:
      run: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: web
